Mon Jun  2 22:12:10 EDT 2008	Dave Foster <daf@minuslab.net>
	* Fixed bug with --log-to-stdout and handlers that wrote to 
	  stdout.

Tue May 25 23:08:00 EDT 2008   	Andrew Yates <andrew@andrewyates.net>
	* Fixed bug where recurse=true resulted in a segfault.
	
Mon Aug 20 14:48:04 EDT 2007	Dave Foster <daf@minuslab.net>
	* Added a delay return code for handlers.  Returning 2 from
	  a handler will automatically delay a handler for 5 minutes,
	  at a max of 5 times.  We need to let users configure this.

Fri Aug 17 11:24:28 EDT 2007	Dave Foster <daf@minuslab.net>
	* Added better process cleanup support.
	* Preparing for handlers to implement a delay return code.

Mon Dec 18 21:15:07 EST 2006	Dave Foster <daf@minuslab.net>
	* Implemented logging.
	* Implemented forking for handlers.

Tue Oct 31 20:33:54 EST 2006	Dave Foster <daf@minuslab.net>
	* Starting using changelog.
	* Inserted signal handlers for quit signals.
	* Moved config to be a global var.