@@ -1,3 +1,8 @@
+Wed Jul 30 22:08:24 EDT 2008	Dave Foster <daf@minuslab.net>
+	* Added ability to watch directories created under directories
+	  you are already watching when recurse option is set.  Will
+	  notice when they are deleted too.
+
 Mon Jun  2 22:12:10 EDT 2008	Dave Foster <daf@minuslab.net>
 	* Fixed bug with --log-to-stdout and handlers that wrote to 
 	  stdout.
